--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 		<!-- Library code. -->
 		<script src="lib/jquery-2.0.2.js" type="text/javascript"></script>
-		<script src="lib/angular-1.1.4.js" type="text/javascript"></script>
+		<script src="lib/angular.js" type="text/javascript"></script>
 
 		<!-- App code. -->
 		<script src="app.js" type="text/javascript"></script>
