--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+	<html>
 	<head>
 		<title>Simple AngularJS Skeleton</title>
 	</head>	
@@ -6,8 +6,8 @@
 		{{dataBindingTest}}
 
 		<!-- Library code. -->
-		<script src="lib/jquery-2.0.2.js" type="text/javascript"></script>
-		<script src="lib/angular.js" type="text/javascript"></script>
+		<script src="bower_components/jquery/dist/jquery.js" type="text/javascript"></script>
+		<script src="bower_components/angular/angular.js" type="text/javascript"></script>
 
 		<!-- App code. -->
 		<script src="app.js" type="text/javascript"></script>
